--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: python
 python:
-  - "3.6"
-cache: pip
+  - 2.7
+  - 3.5
+  - 3.6
+before_install:
+  - python --version
+  - pip install -U pip
+  - pip install -U pytest
+  - pip install codecov
 install:
-  - pip install -r requirements.txt
-
+  - pip install ".[test]" . # install package + test dependencies
+script: pytest # run tests
+after_success:
+  - codecov # submit coverage
