--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: python
 python:
-  - "3.6"
-  - "3.7"
-install: pip install tox-travis
-script: tox
+  - "2.6"
+  - "2.7"
+  - "3.2"
+  - "3.3"
+# command to install dependencies
+cache: pip
+install:
+  - pip install -r requirements.txt
+script: python tests/test_all_of_the_units.py
