--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,12 @@ before_install:
   - pip install --upgrade pip
 install:
   - pip install -r requirements.txt
-  - pip install codecov
+  - pip install pytest
+  - pip install -e
+  - python setup.py install
 script:
-  - coverage run -m pytest
-after_success:
-  - codecov
+  - pytest
+
   
 matrix:
   include:
